plugins {
	id 'idea'
	id 'groovy'
	id 'java-library'
	id 'signing'
	id 'maven-publish'
	id 'io.freefair.lombok' version '6.0.0-m2'
}

group = 'dev.claudio'
version = '0.0.1-SNAPSHOT'

apply from: 'maven-publishing.gradle'

compileJava {
	options.release = 8
	options.compilerArgs << '-Xlint:all'
}

test {
	useJUnitPlatform()
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.data:spring-data-jpa:2.5.0'
	implementation 'jakarta.persistence:jakarta.persistence-api:2.2.3'

	testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
	testImplementation 'org.spockframework:spock-spring:2.0-M5-groovy-3.0'
	testImplementation 'org.spockframework:spock-core:2.0-M5-groovy-3.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.5'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.5'

	testRuntimeOnly 'com.h2database:h2:1.4.200'
}
